--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,6 @@ cover/
 *.pot
 
 # Django stuff:
-*.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
@@ -188,3 +187,4 @@ pyvenv.cfg
 
 # Fetched pages
 data/
+logs/
